--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,6 +11,9 @@
 %%   of the thesis
 %     --> 
 
+%%% TODO TODO TODO TODO TODO TODO 
+%%% Hole : Conclusion - what to put here?
+%%% TODO TODO TODO TODO TODO TODO 
 
 \add{
 \section{Metamaterials -- Critique and alternatives}
@@ -77,7 +80,6 @@ One example may be the theory of strongly hyperbolic media, which turns out to b
 We presented experimental and theoretical studies of simple periodic structures -- the periodic arrays of dielectric slabs, two orientations of rods, dielectric spheres, metallic wire mesh, as well as a composite of spheres and a mesh. An attempt was made to make an analysis of the modes that are responsible for the photonic bands, illustrating different electromagnetic phenomena and their dependence on a structure parameter. An analytic model for wire medium was proven to match our numerical results.
 The prospects for the future work are to broaden this catalogue to other structures in order to enable comparison and deeper physical interpretation of their behaviour. 
 
-%The dissertation involved the development of a reliable platform for numerical simulations of photonic structures, based on freely available code. The results from these simulations will be verified against experimental data and analytic models.
 A versatile numerical environment for simulations was prepared and tested in the last two years. All computation scripts, containing over 2000 lines of Python code, are open-source and they use freely-redistributable libraries only, which may be useful for the broader scientific community in the future. 
 The automated effective parameters retrieval from FDTD is especially suitable for parametric scans. It proves instrumental in optimisation of the structure performance, matching experimental data, as well as studying the tunability.
 
