--- a/numeric.tex
+++ b/numeric.tex
@@ -334,6 +334,9 @@ Free unbounded	& Negligible				& Resistive medium						& \shortstack{doped semic
 
 \subsection{Finite-difference frequency-domain} % TODO
 \paragraph{Principle} 
+%%% TODO TODO TODO TODO TODO TODO 
+%%% Hole : FDFD
+%%% TODO TODO TODO TODO TODO TODO 
 \mdf{ TODO
 %%% One may regard the task of
 %%% frequency-domain solution as eigenvector problem, where the
