--- a/result.tex
+++ b/result.tex
@@ -1,4 +1,7 @@
 \label{section_result}
+%%% TODO TODO TODO TODO TODO TODO 
+%%% Hole : Results - rearrange, plot, write, finish
+%%% TODO TODO TODO TODO TODO TODO 
 
 \paragraph{Antiresonances and problems with local effective parameters}
 %% TODO add to the first Mie resonance discussed
