--- a/theory.tex
+++ b/theory.tex
@@ -386,7 +386,7 @@ $$\hspace{3cm}\vg = \kk \omega / k^2 \hspace{3cm} \text{(in nondispersive isotro
 
 Usually, in spectral regions near a resonance, also the quadratic or even higher terms in the Taylor expansion of the $\omega(\kk)$ dependence shall be taken into account. This effect is known as the \textit{group velocity dispersion} as it is equivalent to the group velocity $\vg(\kk)$ being dependent on the wavevector (or, if reformulated, on frequency). It results in a temporal distortion of the wave envelope $\E_0(t)$.  %% TODO ... and what about the wave distortion in space?
 %}}}
-\paragraph{Propagation of beams in anisotropic media}  %{{{  
+\paragraph{Beam propagation in anisotropic media}  %{{{  
 The refraction of a beam is illustrated in Fig. \ref{fg_ifc2} by means of three slightly different wavevectors it is composed of. For simplicity, a monochromatic wave was used, so brown, black and violet were chosen for the three example wavevectors to prevent confusion with the rainbow-like frequency color map used in Fig. \ref{fg_ifc}. 
 
 In the first plot, \ref{fg_ifc2}a, the case of an isotropic medium is illustrated. Upon refraction into a general anisotropic medium in Fig. \ref{fg_ifc2}b, each component must maintain its wavevector projection to the interface, thus the wavevectors spread in their direction. The resulting beam propagates along the group velocity that is different from the central wavevector; % The components of the resulting beam are   is narrower and does not propagate 
@@ -987,21 +987,24 @@ The band-gap behaviour is simplest to describe in isotropic media, analogous to 
 
 A familiar scenario is that a wave propagates through a transparent medium (e.g. glass) and impinges an interface with a band-gap medium (e.g. metal). In the latter, it is not allowed to propagate, and all its energy reflects back into the first medium. The Maxwell equations however require that the fields do not end abruptly at the interface; in particular, it follows from the linearity of the medium that the \textit{evanescent} wave amplitude decays in the second medium in an exponential manner with the distance below the interface.
 
-If losses are present, part of the impinging wave energy may be also dissipated. Nonetheless, he exponential decay of the evanescent wave should not be confused with the exponential nature of the Lambert-Beer law.
+If losses are present, part of the impinging wave energy may be also dissipated. Nonetheless, he exponential decay of the evanescent wave should not be confused with the exponential nature of the Lambert-Beer law in absorbing media.
 
-A scenario less typical, but not less instructive, is when a dipole source is embedded in the infinite medium and is forced by some external mechanism to oscillate at some frequency within the band-gap. Intuitively, one could expect such a "hard" dipole will inevitably put energy into the medium. In reality, the effect of the medium surrounding the dipole will make the dipole to act as a purely elastic or inertial load to the driving force. If the dipole is realized as an antenna driven by a high-frequency circuit, it will appear to the circuit as purely capacitive or inductive load. For continuous oscillations, all energy will be returned to the driving mechanism. 
+A scenario less typical, but not less instructive, is when a dipole source is embedded in the infinite medium and is forced by some external mechanism to oscillate at some frequency within the band-gap. Intuitively, one could expect such a "hard" dipole will inevitably put energy into the medium. In reality, the effect of the medium surrounding the dipole will make the dipole act, with regards the driving force, as a purely elastic or inertial load. In particular, if the dipole is realized as an antenna driven by a high-frequency circuit, it will appear to the circuit as purely capacitive or inductive load. Thus, for continuous oscillations, all energy will be returned to the driving mechanism. 
 
-To prevent the energy from being returned to the source, one can further imagine the energy is pushed into the dipole in a very short pulse, and then the dipole somehow disappears. However, the nature of the band-gap can not be overcome. From the convolution-multiplication theorem, such a pulsed source would have a broad spectrum and it would radiate the energy in the neighbouring allowed bands. 
+To prevent the energy from being returned to the source, one can further imagine the energy is pushed into the dipole in a very short pulse, and then the dipole completely disappears. However, the nature of the band-gap can not be overcome: from the convolution-multiplication theorem, such a pulsed source would have a broad spectrum and it would radiate the energy in the neighbouring allowed bands. 
 
 % }}}
 \paragraph{Band-gaps stemming from individual resonances}%{{{
 One common class of band-gaps is based on \textit{individual resonances} in the medium or structure. These band-gaps are often observed in realistic natural media, where the resonances arise from the vibration of electrons, atoms or molecules, as described above. 
-Although realistic media are composed of a lattice of individual atoms which would suggest that even here the wave has the Bloch form of Eqs. (\ref{eq_bloch},\ref{eq_blochh}), the atoms are roughly $10^{4}$ times smaller than the wavelength, and the electromagnetic wave can be sufficiently approximated as a harmonic wave in Eq. (\ref{eq_pw}) with a well-defined wavelength.
-It is important that these particles are small and close to each other compared to the wavelength. % ; otherwise  % 
+Although realistic media are composed of a lattice of individual atoms, which would suggest that even here the wave has the Bloch form of Eqs. (\ref{eq_bloch},\ref{eq_blochh}), the atoms are roughly $10^{4}$ times smaller than the wavelength, and the electromagnetic wave can be sufficiently approximated as a harmonic wave in Eq. (\ref{eq_pw}) with a well-defined wavelength.  To make this harmonic approximation, it is important that these particles are small and close to each other compared to the wavelength. % ; otherwise  % 
 
-Periodic structures can similarly exhibit a resonance confined in the unit cell. To the author's knowledge, every possible shape formed from a dielectric or metal has infinitely many resonance modes, characteristic by relatively high concentration of energy in the structure, or near to it, and relatively weak coupling to the incident electromagnetic wave. Arranging such resonant elements into the lattice is a fundamental step in building a periodic structure with resonant behaviour. In such structures, the dispersion for the Bloch wave follows a resonance curve similar (but not the same) as in Fig. \ref{fg_oscillator_spectrum}. Sometimes the behaviour of the Bloch wave is described as \textit{macroscopic}, while the fields localized in the resonant elements as \textit{mesoscopic} \cite{felbacq2005theory}, and the word \textit{microscopic} is left for the much finer fields in the constituent atoms or molecules.
+Periodic structures can similarly exhibit a resonance confined in the unit cell. 
+To the author's knowledge,  %% XX?
+every possible shape formed from a dielectric or metal has infinitely many resonance modes,  %% ... high-permittivity and...
+characteristic by relatively high concentration of energy in the structure, or near to it, and relatively weak coupling to the incident electromagnetic wave.  %% ... More specific rules will be given in the Results.
+Arranging such resonant elements into the lattice is a fundamental step in building a periodic structure with resonant behaviour. In such structures, the dispersion for the Bloch wave follows a resonance curve similar (but not the same) as in Fig. \ref{fg_oscillator_spectrum}. Sometimes the behaviour of the Bloch wave is described as \textit{macroscopic}, while the fields localized in the resonant elements as \textit{mesoscopic} \cite{felbacq2005theory}, and the word \textit{microscopic} is left for the much finer fields in the constituent atoms or molecules.
 
-Another important characteristic of individual resonances is that when the frequency is changed between the lower and upper edge of the band-gap, some internal change of the response happens. This is true for natural media as well as for lattices of individual resonators. Typically, at the lower band-gap edge, the dipoles are \textit{in-phase} with the wave, whereas at the upper edge, they are \textit{in counter-phase}.  % TODO note also that these indiv resonances are typical by a resonance shape in the permitivity
+Another important characteristic of individual resonances is in a \textit{qualitative} change in the field shape between the lower and upper edge of the band-gap. This is true for natural media as well as for lattices of individual resonators. Typically, at the lower band-gap edge, the dipoles are \textit{in-phase} with the wave, whereas at the upper edge, they are \textit{in counter-phase}.  % TODO note also that these indiv resonances are typical by a resonance shape in the permitivity
 Inside the bandgap, usually closer to the lower frequency edge, a resonance frequency is located (c.f. Fig. \ref{fg_oscillator_spectrum}).
 
 Yet another characteristic is that the resonant interaction of a particle with the wave can be approximated as a point dipole or multipole. As is dictated by the symmetry of the resonant field in the particle, the dipole moment may be electric, magnetic, zero or both simultaneously. A particle has multiple resonances at different frequencies, each of them having usually either an electric or a magnetic dipole. In particles of lower symmetry, one resonant mode may have both nonzero dipole moments simultaneously; this leads to optical activity. 
