sync comments from IR

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1886,5 +1886,23 @@ lts.fzu.cz/pdf/d-js.pdf
   author={Hill, Mitch},
   year={2013}
 }
+@article{bragg1913reflection,
+  title={The reflection of X-rays by crystals},
+  author={Bragg, WH and Bragg, WL},
+  journal={Proceedings of the Royal Society of London. Series A, Containing Papers of a Mathematical and Physical Character},
+  pages={428--438},
+  year={1913},
+  publisher={JSTOR}
+}
+@article{friedrich1913interferenzerscheinungen,
+  title={Interferenzerscheinungen bei roentgenstrahlen},
+  author={Friedrich, Walter and Knipping, Paul and Laue, Max},
+  journal={Annalen der Physik},
+  volume={346},
+  number={10},
+  pages={971--988},
+  year={1913},
+  publisher={Wiley Online Library}
+}
 
 
