--- a/intro.tex
+++ b/intro.tex
@@ -25,8 +25,15 @@ Yet none of these approaches is optimal for the THz applications; from the elect
 These deficiencies provide additional reasons to search for the new possibilities opened by photonic devices and periodic structures operating in the terahertz range.  
 
 %}}}
-%% \section{Aims of the thesis} ??
-\section{Outline of the thesis} %{{{
+\section{Goals of the thesis}
+% 1  emphasize the importance of spatial-dispersive electrodynamics
+% 2  put all particular metamaterial systems into a perspective for comparison
+% 3  showcase the Python-MEEP scripts for metamaterial simulation
+% 4  
+% 5
+
+
+\section{Outline of the chapters}
 \paragraph{Theory} %{{{
 The theoretical chapter starts with a review of linear \textit{electrodynamics of continuous media} with an account for anisotropy. In its customary form without account for spatial dispersion, this topic is treated in every related textbook. Many related topics such as nonlinearity, optical activity and gyrotropy are not discussed here, as they are not essential for the description of metamaterials in the rest of the thesis.  
 
@@ -67,14 +74,12 @@ General conclusions and prospects are drawn in a separate section that follows t
 %}}}
 \paragraph{Appendices} %{{{
 At the end of the thesis, several sections are devoted to topics which did not fit into the flow of the text. 
+The lists of abbreviations and symbols used are attached.
 
 %}}}
 
-
-
-%}}}
 \section{Conventions used}%{{{
-Thorough the thesis, we use a single or double apostrophe ($x', x''$) to refer to the real and imaginary part of a complex number ($x$). Italic symbols (e.g. $k$) represent the magnitudes of vectors, which are denoted by respective bold symbols (e.g. $k = |\kk|$). Components of vectors are denoted by small indices, such as $k_x, k_y, k_z$.
+Throughout the thesis, we use a single or double apostrophe ($x', x''$) to refer to the real and imaginary part of a complex number ($x$). Italic symbols (e.g. $k$) represent the magnitudes of vectors, which are denoted by respective bold symbols (e.g. $k = |\kk|$). Components of vectors are denoted by small indices, such as $k_x, k_y, k_z$. 
 
 The explicit time, space or frequency dependence of quantities are omitted when it does not allow confusion. So for electric field we write $\E$ instead of $\E(\rr,t)$.
 
